// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator snapshots > 'express-auth' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      Role     @default(USER)
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}

enum Role {
  USER
  ADMIN
}",
    "src/app.ts": "import express from "express";
import { createAuthRoutes } from "./routes/auth.routes";
import { createProtectedRoutes } from "./routes/protected.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.use("/auth", createAuthRoutes(auth));
  app.use("/", createProtectedRoutes(auth));

  return app;
};",
    "src/controllers/auth.controller.ts": "import { Request, Response } from "express";
import { AuthService } from "../services/auth.services";
import { parseCredentials, parseRefreshToken } from "../utils/security";

export const createAuthController = (auth: any) => ({
  async register(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.register(email, password);

      res.json({ message: "User created", userId: user.id });
    } catch (err) {
      res.status(400).json({ error: (err as Error).message || "Invalid registration request" });
    }
  },

  async login(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.login(email, password);

      const accessToken = auth.signToken({
        userId: user.id,
        email: user.email,
      });

      const refreshToken = await auth.generateRefreshToken({
        userId: user.id,
        email: user.email,
      });

      res.json({ accessToken, refreshToken });
    } catch {
      res.status(401).json({ error: "Invalid credentials" });
    }
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },
});",
    "src/controllers/protected.controller.ts": "import { Request, Response } from "express";
import { sanitizeSessionResponse } from "../utils/security";

export const createProtectedController = () => ({
  protected(req: Request, res: Response) {
    res.json({ message: "Protected route" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const sessions = await actions.listSessions(req.params.userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch {
      res.status(500).json({ success: false, message: "Failed to retrieve sessions" });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeSession(req.params.userId, req.params.sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke session" });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeAllSessions(req.params.userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke sessions" });
    }
  },
});",
    "src/routes/auth.routes.ts": "import { Router } from "express";
import { createAuthController } from "../controllers/auth.controller";

export const createAuthRoutes = (auth: any) => {
  const router = Router();
  const controller = createAuthController(auth);

  router.post("/register", controller.register);
  router.post("/login", controller.login);
  router.post("/refresh", controller.refresh);

  return router;
};",
    "src/routes/protected.routes.ts": "import { Router } from "express";
import { createProtectedController } from "../controllers/protected.controller";

export const createProtectedRoutes = (auth: any) => {
  const router = Router();
  const controller = createProtectedController();

  router.get("/protected", auth.requireAdmin, controller.protected);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/utils/hash.ts": "import bcrypt from "bcryptjs";

export const hashPassword = (password: string) => {
return bcrypt.hash(password, 10);
};

export const comparePassword = (password: string, hash: string) => {
return bcrypt.compare(password, hash);
};",
  },
  "template": "auth",
  "tree": [
    "package.json",
    "prisma/",
    "prisma/schema.prisma",
    "src/",
    "src/app.ts",
    "src/controllers/",
    "src/controllers/auth.controller.ts",
    "src/controllers/protected.controller.ts",
    "src/prisma/",
    "src/prisma/client.ts",
    "src/routes/",
    "src/routes/auth.routes.ts",
    "src/routes/protected.routes.ts",
    "src/server.ts",
    "src/services/",
    "src/services/auth.services.ts",
    "src/utils/",
    "src/utils/hash.ts",
    "src/utils/security.ts",
    "tsconfig.json",
  ],
}
`;

exports[`generator snapshots > 'express-auth-oauth' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      String     @default("USER")
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}",
    "src/auth/auth.middleware.ts": "import { Request, Response, NextFunction } from "express";
import { getAuth } from "./auth";

export const adminMiddleware = (req: Request, res: Response, next: NextFunction) => {
  getAuth().requireAdmin(req, res, next);
};

export const authMiddleware = (req: Request, res: Response, next: NextFunction) => {
  getAuth().authenticateJWT(req, res, next);
};",
    "src/auth/auth.ts": "import { createAuthenik8 } from "authenik8-core";
import dotenv from "dotenv";
import { requiredEnv, requiredSecret } from "../utils/security";

dotenv.config();

let authInstance: any;



export async function initAuth() {
  authInstance= await createAuthenik8({
    jwtSecret: requiredSecret("JWT_SECRET"),
    refreshSecret: requiredSecret("REFRESH_SECRET"),

    oauth: {
      google: {
        clientId: requiredEnv("GOOGLE_CLIENT_ID"),
        clientSecret: requiredEnv("GOOGLE_CLIENT_SECRET"),
        redirectUri: requiredEnv("GOOGLE_REDIRECT_URI"),
      },
      github: {
        clientId: requiredEnv("GITHUB_CLIENT_ID"),
        clientSecret: requiredEnv("GITHUB_CLIENT_SECRET"),
        redirectUri: requiredEnv("GITHUB_REDIRECT_URI"),
      },
    },
  });

}
export function getAuth() {
  if (!authInstance) {
    throw new Error("Auth not initialized. Call initAuth() first.");
  }

  return authInstance;
}

export const auth = new Proxy(
  {},
  {
    get(_target, property) {
      return getAuth()[property as keyof ReturnType<typeof getAuth>];
    },
  },
) as any;",
    "src/auth/oauth.controller.ts": "import { Request, Response } from "express";
import { getAuth } from "./auth";

export const oauthController = {
  googleRedirect(req: Request, res: Response) {
    getAuth().oauth?.google?.redirect(req, res);
  },

  async googleCallback(req: Request, res: Response) {
    const result = await getAuth().oauth?.google?.handleCallback(req);

    res.json({
      provider: "google",
      ...result,
    });
  },

  githubRedirect(req: Request, res: Response) {
    getAuth().oauth?.github?.redirect(req, res);
  },

  async githubCallback(req: Request, res: Response) {
    const result = await getAuth().oauth?.github?.handleCallback(req);

    res.json({
      provider: "github",
      ...result,
    });
  },

  googleLink(req: Request, res: Response) {
    getAuth().oauth?.google?.redirect(req, res, "link");
  },

  githubLink(req: Request, res: Response) {
    getAuth().oauth?.github?.redirect(req, res, "link");
  },
};",
    "src/auth/oauth.routes.ts": "import express from "express";
import { authMiddleware } from "./auth.middleware";
import { oauthController } from "./oauth.controller";

const router = express.Router();

router.get("/google", oauthController.googleRedirect);
router.get("/google/callback", oauthController.googleCallback);
router.get("/github", oauthController.githubRedirect);
router.get("/github/callback", oauthController.githubCallback);
router.get("/google/link", authMiddleware, oauthController.googleLink);
router.get("/github/link", authMiddleware, oauthController.githubLink);

export default router;",
    "src/auth/password.controller.ts": "import { Request, Response } from "express";
import { getAuth } from "./auth";
import { prisma } from "../prisma/client";
import { hashPassword, comparePassword } from "../utils/hash";
import { parseCredentials } from "../utils/security";

export const passwordController = {
  async register(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const existingUser = await prisma.user.findUnique({ where: { email } });
      if (existingUser) {
        return res.status(400).json({ error: "Email is already registered" });
      }

      const user = await prisma.user.create({
        data: {
          email,
          password: await hashPassword(password),
        },
      });

      res.json({ message: "User created", userId: user.id });
    } catch (err) {
      res.status(400).json({ error: (err as Error).message || "Invalid registration request" });
    }
  },

  async login(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);
      const user = await prisma.user.findUnique({ where: { email } });

      if (!user || !(await comparePassword(password, user.password))) {
        return res.status(401).json({ error: "Invalid credentials" });
      }

      const auth = getAuth();
      const accessToken = auth.signToken({
        userId: user.id,
        email: user.email,
      });

      const refreshToken = await auth.generateRefreshToken({
        userId: user.id,
        email: user.email,
      });

      res.json({ accessToken, refreshToken });
    } catch {
      res.status(401).json({ error: "Invalid credentials" });
    }
  },
};",
    "src/auth/password.route.ts": "import express from "express";
import { passwordController } from "./password.controller";

const router = express.Router();

router.post("/register", passwordController.register);
router.post("/login", passwordController.login);

export default router;",
    "src/auth/protected.controller.ts": "import { Request, Response } from "express";
import { sanitizeSessionResponse } from "../utils/security";

export const protectedController = {
  protected(req: Request, res: Response) {
    res.json({ message: "Protected route" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const sessions = await actions.listSessions(req.params.userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch {
      res.status(500).json({ success: false, message: "Failed to retrieve sessions" });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeSession(req.params.userId, req.params.sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke session" });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeAllSessions(req.params.userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke sessions" });
    }
  },
};",
    "src/auth/protected.routes.ts": "import express from "express";
import { adminMiddleware } from "./auth.middleware";
import { protectedController } from "./protected.controller";

const router = express.Router();

router.get("/protected", adminMiddleware, protectedController.protected);
router.get("/admin/sessions/:userId", adminMiddleware, protectedController.listSessions);
router.delete("/admin/sessions/:userId/:sessionId", adminMiddleware, protectedController.revokeSession);
router.delete("/admin/sessions/:userId", adminMiddleware, protectedController.revokeAllSessions);

export default router;",
    "src/server.ts": "import express from "express";
import passwordRoutes from "./auth/password.route";
import oauthRoutes from "./auth/oauth.routes";
import protectedRoutes from "./auth/protected.routes";
import { getAuth, initAuth } from "./auth/auth";

async function start(){
		await initAuth();
  const auth = getAuth();
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));
  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.use("/auth", passwordRoutes);
  app.use("/auth", oauthRoutes);
  app.use("/", protectedRoutes);

  app.listen(3000, () => {
    console.log("Auth system running on http://localhost:3000");
  });
}

start();
process.on("uncaughtException", (err) => {
  console.error(" Uncaught Exception:", err);
  process.exit(1); 
});

process.on("unhandledRejection", (err) => {
  console.error(" Unhandled Rejection:", err);
  process.exit(1);
});
setInterval(() => {
  const used = process.memoryUsage().heapUsed / 1024 / 1024;

  if (used > 300) {
    console.error(\` Memory exceeded: \${used.toFixed(2)} MB\`);
    process.exit(1);
  }
}, 10000);",
    "src/utils/hash.ts": "import bcrypt from "bcryptjs";

export const hashPassword = (password: string) => {
return bcrypt.hash(password, 10);
};

export const comparePassword = (password: string, hash: string) => {
return bcrypt.compare(password, hash);
};",
  },
  "template": "auth-oauth",
  "tree": [
    "package.json",
    "prisma/",
    "prisma/schema.prisma",
    "src/",
    "src/auth/",
    "src/auth/auth.middleware.ts",
    "src/auth/auth.ts",
    "src/auth/oauth.controller.ts",
    "src/auth/oauth.routes.ts",
    "src/auth/password.controller.ts",
    "src/auth/password.route.ts",
    "src/auth/protected.controller.ts",
    "src/auth/protected.routes.ts",
    "src/prisma/",
    "src/prisma/client.ts",
    "src/server.ts",
    "src/utils/",
    "src/utils/hash.ts",
    "src/utils/security.ts",
    "tsconfig.json",
  ],
}
`;

exports[`generator snapshots > 'express-base' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "app.ts": "import express from "express";
import { createBaseRoutes } from "./routes/base.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.use("/", createBaseRoutes(auth));

  return app;
};",
    "controllers/base.controller.ts": "import { Request, Response } from "express";
import { getBearerToken, parseRefreshToken, sanitizeSessionResponse } from "../utils/security";

export const createBaseController = (auth: any) => ({
  publicRoute(req: Request, res: Response) {
    res.json({ message: "Public route" });
  },

  async guest(req: Request, res: Response) {
    const token = await auth.guestToken({ role: "guest" });
    res.json({ token });
  },

  async protected(req: Request, res: Response) {
    const token = getBearerToken(req.headers.authorization);

    try {
      const decoded = await auth.verifyToken(token);
      res.json({ message: "Protected data", user: decoded });
    } catch {
      res.status(401).json({ error: "Unauthorized" });
    }
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },

  admin(req: Request, res: Response) {
    res.json({ message: "Admin only" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const sessions = await actions.listSessions(req.params.userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch {
      res.status(500).json({ success: false, message: "Failed to retrieve sessions" });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeSession(req.params.userId, req.params.sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke session" });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      await actions.revokeAllSessions(req.params.userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch {
      res.status(500).json({ success: false, message: "Failed to revoke sessions" });
    }
  },
});",
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      String     @default("USER")
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}",
    "routes/base.routes.ts": "import { Router } from "express";
import { createBaseController } from "../controllers/base.controller";

export const createBaseRoutes = (auth: any) => {
  const router = Router();
  const controller = createBaseController(auth);

  router.get("/public", controller.publicRoute);
  router.get("/guest", controller.guest);
  router.get("/protected", controller.protected);
  router.post("/refresh", controller.refresh);

  router.get("/admin", auth.requireAdmin, controller.admin);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/server.ts": "import dotenv from "dotenv";
import { createAuthenik8 } from "authenik8-core";
import { createApp } from "../app";
import { requiredSecret } from "../utils/security";

dotenv.config();

async function start() {
  const auth = await createAuthenik8({
    jwtSecret: requiredSecret("JWT_SECRET"),
    refreshSecret: requiredSecret("REFRESH_SECRET"),
  });

  const app = createApp(auth);

  app.listen(3000, () => {
    console.log("🚀 Server running on http://localhost:3000");
  });
}
process.on("uncaughtException", (err) => {
  console.error(" Uncaught Exception:", err);
  process.exit(1);
});

process.on("unhandledRejection", (err) => {
  console.error(" Unhandled Rejection:", err);
  process.exit(1);
});
setInterval(() => {
  const used = process.memoryUsage().heapUsed / 1024 / 1024;

  if (used > 300) {
    console.error(\`Memory exceeded: \${used.toFixed(2)} MB\`);
    process.exit(1);
  }
}, 10000);
start();",
  },
  "template": "base",
  "tree": [
    "app.ts",
    "controllers/",
    "controllers/base.controller.ts",
    "package.json",
    "prisma/",
    "prisma/schema.prisma",
    "routes/",
    "routes/base.routes.ts",
    "src/",
    "src/server.ts",
    "tsconfig.json",
    "utils/",
    "utils/security.ts",
  ],
}
`;
